--- a/layouts/main-layout.html
+++ b/layouts/main-layout.html
@@ -12,6 +12,7 @@
       <nav>
         <a href="/">Home</a>
         <a href="/login">Login</a>
+        <a href="/signup">Signup</a>
       </nav>
     </header>
     {{template "content" .}}
