--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+    <link rel="stylesheet" type="text/css" href="/styles/reset.css" />
     <title>HTMX TODO</title>
   </head>
   <body>
