--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -32,13 +32,13 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="/">Home</a>
+                <a {{if eq . "/"}}class="nav-link active" {{else}} class="nav-link"{{end}} aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/login">Login</a>
+                <a {{if eq . "/login"}}class="nav-link active" {{else}} class="nav-link"{{end}} href="/login">Login</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/signup">Signup</a>
+                <a {{if eq . "/signup"}}class="nav-link active" {{else}} class="nav-link"{{end}} href="/signup">Signup</a>
               </li>
             </ul>
           </div>
