--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -32,20 +32,22 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a {{if eq . "/"}}class="nav-link active" {{else}} class="nav-link"{{end}} aria-current="page" href="/">Home</a>
+                <a {{if eq . "/"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a {{if eq . "/login"}}class="nav-link active" {{else}} class="nav-link"{{end}} href="/login">Login</a>
+                <a {{if eq . "/login"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/login">Login</a>
               </li>
               <li class="nav-item">
-                <a {{if eq . "/signup"}}class="nav-link active" {{else}} class="nav-link"{{end}} href="/signup">Signup</a>
+                <a {{if eq . "/signup"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/signup">Signup</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     </header>
-    {{template "content" .}}
+    <div class="container-xxl mx-auto" >
+      {{template "content" .}}
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
