--- a/views/pages/sign-up.html
+++ b/views/pages/sign-up.html
@@ -1,7 +1,7 @@
 {{define "content"}}
 <div class="container">
   <h2>Sign Up</h2>
-  <form hx-post="/api/signup">
+  <form hx-post="/api/users">
     <div>
       <label for="signup-email">Email:</label>
       <input type="email" id="signup-email" name="signup-email" required />
