updated page styles

--- a/views/components/confirm-password.html
+++ b/views/components/confirm-password.html
@@ -1,15 +1,9 @@
-<div hx-target="this" hx-swap="outerHTML">
-  <label for="signup-password-confirm">Confirm Password:</label>
-  <input
-    class="invalid-password"
-    type="password"
-    id="signup-password-confirm"
-    name="signup-password-confirm"
-    required
-    value="{{.Value}}"
-    hx-post="/api/validate-password"
-  />
+<div class="mb-3" hx-target="this" hx-swap="outerHTML">
+  <label class="form-label" for="signup-password-confirm">Confirm Password:</label>
+
+  <input {{if .IsInvalid}} class="form-control is-invalid" {{else}} class="form-control is-valid" {{end}} type="password" id="signup-password-confirm" name="signup-password-confirm" required value="{{.Value}}" hx-post="/api/validate-password" />
+
   {{if .IsInvalid}}
-  <p class="password-message--error">The two passwords do not match.</p>
+  <div class="invalid-feedback">The two passwords do not match.</div>
   {{end}}
 </div>
