--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -11,6 +11,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles/signup-page.css">
+    <link rel="stylesheet" href="styles/login-page.css">
     <title>HTMX TODO</title>
   </head>
   <body>
