--- a/views/pages/sign-up.html
+++ b/views/pages/sign-up.html
@@ -1,31 +1,20 @@
 {{define "content"}}
-<div class="container">
+<div class="signup-page">
   <h2>Sign Up</h2>
-  <form hx-post="/api/users">
-    <div>
-      <label for="signup-email">Email:</label>
-      <input type="email" id="signup-email" name="signup-email" required />
+  <form class="needs-validation" hx-post="/api/users">
+    <div class="mb-3">
+      <label class="form-label" for="signup-email">Email:</label>
+      <input class="form-control" type="email" id="signup-email" name="signup-email" required />
     </div>
-    <div>
-      <label for="signup-password">Password:</label>
-      <input
-        type="password"
-        id="signup-password"
-        name="signup-password"
-        required
-      />
+    <div class="mb-3">
+      <label class="form-label" for="signup-password">Password:</label>
+      <input class="form-control" type="password" id="signup-password" name="signup-password" required />
     </div>
-    <div hx-target="this" hx-swap="outerHTML">
-      <label for="signup-password-confirm">Confirm Password:</label>
-      <input
-        type="password"
-        id="signup-password-confirm"
-        name="signup-password-confirm"
-        required
-        hx-post="/api/validate-password"
-      />
+    <div class="mb-3" hx-target="this" hx-swap="outerHTML">
+      <label class="form-label" for="signup-password-confirm">Confirm Password:</label>
+      <input class="form-control" type="password" id="signup-password-confirm" name="signup-password-confirm" required hx-post="/api/validate-password" />
     </div>
-    <button type="submit">Sign Up</button>
+    <button class="btn btn-primary" type="submit">Sign Up</button>
   </form>
 </div>
 {{end}}
