--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -47,7 +47,10 @@
         </div>
       </nav>
     </header>
+    <div id="main-toast-container" class="toast-container position-fixed top-56 end-0 p-3">
+    </div>
     <div class="container-xxl mx-auto" >
+      </div>
       {{template "content" .}}
     </div>
     <script
@@ -55,6 +58,17 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script>
+      document.body.addEventListener('htmx:afterSwap', (event) =>{
+        if(event.detail.target.id === 'main-toast-container'){
+          const toastElList = document.querySelectorAll('.toast')
+          const toastList = [...toastElList].map(toastEl => new bootstrap.Toast(toastEl))
+          for (let toast of toastList) {
+            toast.show()
+          }
+        }
+      })
+    </script>
   </body>
 </html>
 {{end}}
