--- a/views/pages/sign-up.html
+++ b/views/pages/sign-up.html
@@ -1,18 +1,18 @@
 {{define "content"}}
 <div class="signup-page">
   <h2>Sign Up</h2>
-  <form class="needs-validation" hx-post="/api/users">
+  <form class="needs-validation" hx-post="/api/users" hx-target="#main-toast-container" hx-swap="innerHTML">
     <div class="mb-3">
       <label class="form-label" for="signup-email">Email:</label>
-      <input class="form-control" type="email" id="signup-email" name="signup-email" required />
+      <input class="form-control" type="email" id="signup-email" name="signup-email" value="test@email.com" required />
     </div>
     <div class="mb-3">
       <label class="form-label" for="signup-password">Password:</label>
-      <input class="form-control" type="password" id="signup-password" name="signup-password" required />
+      <input class="form-control" type="password" id="signup-password" name="signup-password" required value="123" />
     </div>
     <div class="mb-3" hx-target="this" hx-swap="outerHTML">
       <label class="form-label" for="signup-password-confirm">Confirm Password:</label>
-      <input class="form-control" type="password" id="signup-password-confirm" name="signup-password-confirm" required hx-post="/api/validate-password" />
+      <input class="form-control" type="password" id="signup-password-confirm" name="signup-password-confirm" required hx-post="/api/validate-password" value="123" />
     </div>
     <button class="btn btn-primary" type="submit">Sign Up</button>
   </form>
