--- a/views/components/error-toast.html
+++ b/views/components/error-toast.html
@@ -1,6 +1,6 @@
 <div class="toast align-items-center bg-danger-subtle border-0" role="alert" aria-live="assertive" aria-atomic="true">
   <div class="d-flex">
-    <div class="toast-body">There was an error during sign up.</div>
+    <div class="toast-body">{{.ErrorMessage}}</div>
     <button type="button" class="btn-close btn-close-black me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
   </div>
 </div>
