formatted template files

--- a/views/components/confirm-password.html
+++ b/views/components/confirm-password.html
@@ -1,9 +1,24 @@
 <div class="mb-3" hx-target="this" hx-swap="outerHTML">
-  <label class="form-label" for="signup-password-confirm">Confirm Password:</label>
+  <label class="form-label" for="signup-password-confirm"
+    >Confirm Password:</label
+  >
 
-  <input {{if .IsInvalid}} class="form-control is-invalid" {{else}} class="form-control is-valid" {{end}} type="password" id="signup-password-confirm" name="signup-password-confirm" required value="{{.Value}}" hx-post="/api/validate-password" />
+  <input
+    {{ if .IsInvalid }}
+      class="form-control is-invalid"
+    {{ else }}
+      class="form-control is-valid"
+    {{ end }}
 
-  {{if .IsInvalid}}
-  <div class="invalid-feedback">The two passwords do not match.</div>
-  {{end}}
+    type="password"
+    id="signup-password-confirm"
+    name="signup-password-confirm"
+    required
+    value="{{ .Value }}"
+    hx-post="/api/validate-password"
+  />
+
+  {{ if .IsInvalid }}
+    <div class="invalid-feedback">The two passwords do not match.</div>
+  {{ end }}
 </div>
