--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -19,31 +19,10 @@
     <header>
       <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a {{if eq . "/"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/">Home</a>
-              </li>
-              <li class="nav-item">
-                <a {{if eq . "/login"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/login">Login</a>
-              </li>
-              <li class="nav-item">
-                <a {{if eq . "/signup"}}class="nav-link active" aria-current="page" {{else}} class="nav-link"{{end}} href="/signup">Signup</a>
-              </li>
-            </ul>
-          </div>
+          <a class="navbar-brand" href="/">Todos</a>
+          {{if .}}
+          <a class="btn btn-primary" href="/api/logout" role="button">Logout</a>
+          {{end}}
         </div>
       </nav>
     </header>
