--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -1,53 +1,58 @@
-{{define "main-layout"}}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://unpkg.com/htmx.org@2.0.4"></script>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="styles/signup-page.css">
-    <link rel="stylesheet" href="styles/login-page.css">
-    <title>HTMX TODO</title>
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="/">Todos</a>
-          {{if .IsAuthenticated}}
-          <a class="btn btn-primary" href="/api/logout" role="button">Logout</a>
-          {{end}}
-        </div>
-      </nav>
-    </header>
-    <div id="main-toast-container" class="toast-container position-fixed top-56 end-0 p-3">
-    </div>
-    <div class="container-xxl mx-auto" >
+{{ define "main-layout" }}
+  <!doctype html>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+      <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+        crossorigin="anonymous"
+      />
+      <link rel="stylesheet" href="styles/signup-page.css" />
+      <link rel="stylesheet" href="styles/login-page.css" />
+      <title>HTMX TODO</title>
+    </head>
+    <body>
+      <header>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="/">Todos</a>
+            {{ if .IsAuthenticated }}
+              <a class="btn btn-primary" href="/api/logout" role="button"
+                >Logout</a
+              >
+            {{ end }}
+          </div>
+        </nav>
+      </header>
+      <div
+        id="main-toast-container"
+        class="toast-container position-fixed top-56 end-0 p-3"
+      ></div>
+      <div class="container-xxl mx-auto">
+        {{ template "content" .ContentData }}
       </div>
-      {{template "content" .ContentData}}
-    </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
-    <script>
-      document.body.addEventListener('htmx:afterSwap', (event) =>{
-        if(event.detail.target.id === 'main-toast-container'){
-          const toastElList = document.querySelectorAll('.toast')
-          const toastList = [...toastElList].map(toastEl => new bootstrap.Toast(toastEl))
-          for (let toast of toastList) {
-            toast.show()
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"
+      ></script>
+      <script>
+        document.body.addEventListener('htmx:afterSwap', (event) => {
+          if (event.detail.target.id === 'main-toast-container') {
+            const toastElList = document.querySelectorAll('.toast');
+            const toastList = [...toastElList].map(
+              (toastEl) => new bootstrap.Toast(toastEl),
+            );
+            for (let toast of toastList) {
+              toast.show();
+            }
           }
-        }
-      })
-    </script>
-  </body>
-</html>
-{{end}}
+        });
+      </script>
+    </body>
+  </html>
+{{ end }}
