added functionality to load and add new todos

--- a/views/pages/login.html
+++ b/views/pages/login.html
@@ -13,6 +13,7 @@
           type="email"
           name="login-email"
           id="login-email"
+          value="test@email.com"
         />
       </div>
 
@@ -23,6 +24,7 @@
           type="password"
           name="login-password"
           id="login-password"
+          value="123"
         />
       </div>
       <button class="btn btn-primary" type="submit">Submit</button>
