--- a/views/pages/sign-up.html
+++ b/views/pages/sign-up.html
@@ -3,7 +3,7 @@
     <h2>Sign Up</h2>
     <form
       class="needs-validation"
-      hx-post="/api/users"
+      hx-post="/api/signup"
       hx-target="#main-toast-container"
       hx-swap="innerHTML"
     >
