--- a/views/layouts/main-layout.html
+++ b/views/layouts/main-layout.html
@@ -5,6 +5,10 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <script src="https://unpkg.com/htmx.org@2.0.4"></script>
+      <meta
+        name="htmx-config"
+        content='{"responseHandling": [{"code":".*", "swap": true}]}'
+      />
       <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
